--- a/flutter_keyboard_visibility/android/build.gradle
+++ b/flutter_keyboard_visibility/android/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     }
 }
 
-rootProject.allprojects {
+allprojects {
     repositories {
         google()
         mavenCentral()
@@ -22,12 +22,9 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    // Conditional for compatibility with AGP <4.2.
-    if (project.android.hasProperty("namespace")) {
-        namespace 'com.jrai.flutter_keyboard_visibility'
-    }
+    namespace 'com.jrai.flutter_keyboard_visibility' // ✅ Always include this for AGP 8+
 
-    compileSdkVersion 31
+    compileSdkVersion 33 // ✅ Updated from 31 to 33
 
     defaultConfig {
         minSdkVersion 16
@@ -42,3 +39,4 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
